<package>
  <name>turtlebot_wanderer</name>
  <version>0.6.4</version>
  <description>
    Turtlebot moves randomly.
  </description>
  <maintainer email="d.stonier@gmail.com">Chun Woo Park</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/chatter_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_master</run_depend>
  <run_depend>concert_service_link_graph</run_depend>
  <run_depend>concert_service_utilities</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>concert_service_admin</run_depend>
  <run_depend>rocon_python_utils</run_depend>

  <!-- 
    Hardcode this dependency for now since we only test it on linux 
    Ideally, I wouldn't hardcode the zeroconf implementation though.
    even if it does appeal to us ubuntu eggheads.
  -->
    <run_depend>zeroconf_avahi</run_depend>
  
  <export>
    <rocon_app>rapp/turtlebot_wanderer.rapp</rocon_app>
  </export>
</package>
